--- a/Simulation of Rock Paper Scissors.ipynb
+++ b/Simulation of Rock Paper Scissors.ipynb
@@ -1,28 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Simulation of Rock Paper Scissors.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPoBlFBuQ/Jqee4sfx5CgZO",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Happ2y/py-games/blob/main/Simulation_of_Rock_Paper_Scissors.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -30,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "N7sl8-IeEuR8"
+      },
       "source": [
         "**Swaraj Kumar**\n",
         "\n",
@@ -39,14 +24,11 @@
         "2.   Rock v/s Scissors : Rock\n",
         "3.   Paper v/s Scissors : Scissors\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "N7sl8-IeEuR8"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "csuK25rlEfnI"
       },
@@ -59,24 +41,19 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# possible actions\n",
-        "actions = [\"rock\", \"paper\", \"scissors\"]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "OcItLunpFfAq"
       },
-      "execution_count": 19,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# possible actions\n",
+        "actions = [\"rock\", \"paper\", \"scissors\"]"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# initialize players\n",
-        "playerA = \"COMPUTER\"\n",
-        "print(\"Enter your name here : \",end=\" \")\n",
-        "playerB = input().upper()"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -84,33 +61,39 @@
         "id": "y-Mxy4HrFtpM",
         "outputId": "2ce06750-c322-4bd9-b151-5404ae61d20b"
       },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Enter your name here :  Swaraj\n"
-          ]
-        }
+      "outputs": [],
+      "source": [
+        "# initialize players\n",
+        "playerA = \"COMPUTER\"\n",
+        "print(\"Enter your name here : \",end=\" \")\n",
+        "playerB = input().upper()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "iQcEHiANGh2b"
+      },
+      "outputs": [],
       "source": [
         "# initialize score & log\n",
         "scoreA = scoreB = 0\n",
         "log = list()\n",
         "play = True"
-      ],
-      "metadata": {
-        "id": "iQcEHiANGh2b"
-      },
-      "execution_count": 21,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gMr_mgZJGr8c",
+        "outputId": "dee79af3-ed77-4771-93df-363b3da2e318"
+      },
+      "outputs": [],
       "source": [
         "# game logic\n",
         "while play:\n",
@@ -145,43 +128,11 @@
         "  print(\"Do you want to play (y/n) :\",end=\" \")\n",
         "  if input().lower() == \"n\":\n",
         "    play = False"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gMr_mgZJGr8c",
-        "outputId": "dee79af3-ed77-4771-93df-363b3da2e318"
-      },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Enter your choice {rock, paper or scissors} : apple\n",
-            "SWARAJ, please select a valid choice...\n",
-            "Enter your choice {rock, paper or scissors} : rock\n",
-            "COMPUTER chose scissors & SWARAJ chose rock\n",
-            "Do you want to play (y/n) : y\n",
-            "Enter your choice {rock, paper or scissors} : scissors\n",
-            "COMPUTER chose scissors & SWARAJ chose scissors\n",
-            "Do you want to play (y/n) : y\n",
-            "Enter your choice {rock, paper or scissors} : paper\n",
-            "COMPUTER chose scissors & SWARAJ chose paper\n",
-            "Do you want to play (y/n) : n\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# generate game log\n",
-        "print(\"Generating game logs...\")\n",
-        "for i in log:\n",
-        "  print(i)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -189,22 +140,25 @@
         "id": "zxkR2ZyZM9PZ",
         "outputId": "633840c9-b868-4f51-be61-823d74fd90d1"
       },
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Generating game logs...\n",
-            "COMPUTER chose scissors & SWARAJ chose rock\n",
-            "COMPUTER chose scissors & SWARAJ chose scissors\n",
-            "COMPUTER chose scissors & SWARAJ chose paper\n"
-          ]
-        }
+      "outputs": [],
+      "source": [
+        "# generate game log\n",
+        "print(\"Generating game logs...\")\n",
+        "for i in log:\n",
+        "  print(i)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jwz91tYANKmh",
+        "outputId": "988d9097-46be-4537-9709-8e0a078aefc0"
+      },
+      "outputs": [],
       "source": [
         "# declare results\n",
         "if scoreA > scoreB:\n",
@@ -213,24 +167,40 @@
         "  print(f\"Congratulations {playerB}, wins by {scoreB - scoreA} points\")\n",
         "else:\n",
         "  print(\"Played too intense, it's a draw...\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jwz91tYANKmh",
-        "outputId": "988d9097-46be-4537-9709-8e0a078aefc0"
-      },
-      "execution_count": 24,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Played too intense, it's a draw...\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyPoBlFBuQ/Jqee4sfx5CgZO",
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "Simulation of Rock Paper Scissors.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.10.5 64-bit",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.5"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "8c3d4d9970fc5c09c50d9318a9c7fbf4d0159e4b28833276f5678ee22bded273"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
